// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoosePlan page tests should disable submit and plan picker when submitting 1`] = `
<form>
  <CenteredLogo />
  <Grid>
    <Grid.Column>
      <Panel>
        <Panel.Section>
          <Heading
            as="h3"
          >
            Select A Plan
          </Heading>
        </Panel.Section>
        <_default
          bundles={
            Array [
              Object {
                "bundle": "bundle",
                "messaging": Object {
                  "price": 0,
                },
              },
            ]
          }
          disabled={true}
          onChange={[Function]}
          selectedPromo={Object {}}
        />
        <Panel.Section>
          <PromoCodeNew
            handlePromoCode={
              Object {
                "applyPromoCode": [Function],
                "clearPromoCode": [MockFunction],
              }
            }
            key="promocode"
            promoCodeObj={
              Object {
                "promoError": undefined,
                "promoPending": false,
                "selectedPromo": Object {},
              }
            }
          />
        </Panel.Section>
        <CreditCardSection
          billing={
            Object {
              "countries": Array [],
              "promoPending": false,
              "selectedPromo": Object {},
            }
          }
          isPlanFree={false}
          submitting={true}
        />
        <Panel.Section>
          <Button
            disabled={true}
            type="submit"
            variant="primary"
          >
            Updating Subscription...
          </Button>
        </Panel.Section>
      </Panel>
    </Grid.Column>
  </Grid>
</form>
`;

exports[`ChoosePlan page tests should render correctly 1`] = `
<form>
  <CenteredLogo />
  <Grid>
    <Grid.Column>
      <Panel>
        <Panel.Section>
          <Heading
            as="h3"
          >
            Select A Plan
          </Heading>
        </Panel.Section>
        <_default
          bundles={
            Array [
              Object {
                "bundle": "bundle",
                "messaging": Object {
                  "price": 0,
                },
              },
            ]
          }
          disabled={false}
          onChange={[Function]}
          selectedPromo={Object {}}
        />
        <Panel.Section>
          <PromoCodeNew
            handlePromoCode={
              Object {
                "applyPromoCode": [Function],
                "clearPromoCode": [MockFunction],
              }
            }
            key="promocode"
            promoCodeObj={
              Object {
                "promoError": undefined,
                "promoPending": false,
                "selectedPromo": Object {},
              }
            }
          />
        </Panel.Section>
        <CreditCardSection
          billing={
            Object {
              "countries": Array [],
              "promoPending": false,
              "selectedPromo": Object {},
            }
          }
          isPlanFree={false}
          submitting={false}
        />
        <Panel.Section>
          <Button
            disabled={false}
            type="submit"
            variant="primary"
          >
            Get Started
          </Button>
        </Panel.Section>
      </Panel>
    </Grid.Column>
  </Grid>
</form>
`;

exports[`ChoosePlan page tests should show free bullets when isFree is selected 1`] = `
<form>
  <CenteredLogo />
  <Grid>
    <Grid.Column>
      <Panel>
        <Panel.Section>
          <Heading
            as="h3"
          >
            Select A Plan
          </Heading>
        </Panel.Section>
        <_default
          bundles={
            Array [
              Object {
                "bundle": "bundle",
                "messaging": Object {
                  "price": 0,
                },
              },
            ]
          }
          disabled={false}
          onChange={[Function]}
          selectedPromo={Object {}}
        />
        <Panel.Section>
          <PromoCodeNew
            handlePromoCode={
              Object {
                "applyPromoCode": [Function],
                "clearPromoCode": [MockFunction],
              }
            }
            key="promocode"
            promoCodeObj={
              Object {
                "promoError": undefined,
                "promoPending": false,
                "selectedPromo": Object {},
              }
            }
          />
        </Panel.Section>
        <CreditCardSection
          billing={
            Object {
              "countries": Array [],
              "promoPending": false,
              "selectedPromo": Object {},
            }
          }
          isPlanFree={false}
          submitting={false}
        />
        <Panel.Section>
          <Button
            disabled={false}
            type="submit"
            variant="primary"
          >
            Get Started
          </Button>
        </Panel.Section>
      </Panel>
    </Grid.Column>
  </Grid>
</form>
`;
